12/7 added calendar, fixing signup/login pages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".Options"
             android:exported="true" />
         <activity
-            android:name=".Calendar"
+            android:name=".EventCalendar"
             android:exported="true" />
         <activity
             android:name=".Selection"
