--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.FinalProject"
         tools:targetApi="31">
         <activity
+            android:name=".AddEventActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EventsListActivity"
+            android:exported="false" />
+        <activity
             android:name=".EventAdapter"
             android:exported="false" />
         <activity
