--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,25 +14,25 @@
         tools:targetApi="31">
         <activity
             android:name=".ProfileActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".OrganizationDashboardActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".AddEventActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".EventsListActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".EventAdapter"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Event"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Login"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Options"
             android:exported="true" />
